Update lucene/sandbox/src/java/org/apache/lucene/sandbox/search/DocValuesMultiRangeQuery.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>